--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ server.servlet.context-path=/api/v1
 spring.datasource.url=jdbc:mysql://localhost:3306/helme?serverTimezone=America/Bogota
 spring.datasource.username=root
 spring.datasource.password=
+
+#logging
+
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.springframework.web=INFO
+logging.level.root=INFO
+logging.level.co.edu.iudigital.app.service.impl=WARN
+ # no ejecuta .sql
+spring.jpa.hibernate.ddl-auto=none
