--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 	<artifactId>back-end-delitos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>back-end-delitos</name>
-	<description>API Rest HelpmeIUD</description>
+	<description>API Rest Helpme</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,7 +43,38 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>7.0.2.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+		<dependency>
+		    <groupId>io.swagger.core.v3</groupId>
+		    <artifactId>swagger-annotations</artifactId>
+		    <version>2.1.10</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			
+			<scope>provided</scope>
+		</dependency>
+		
+    </dependencies>
 
 	<build>
 		<plugins>
